...
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultMeta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/smoke"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/editGroup"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_button_tiny"
                android:gravity="center"
                android:paddingStart="10dp"
...
